[package]
name = "lumina"
version = "0.1.0"
edition = "2021"
authors = ["Bhargava Sri Sai M. K. <your-email@example.com>"]
description = "A High-Performance API Gateway & Reverse Proxy built in Rust."

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "fs", "cors", "timeout"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
anyhow = "1.0"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
once_cell = "1.19"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
